--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="card">
         <picture>
           <source
-            srcset="/images/image-product-desktop.jpg"
+            srcset="./images/image-product-desktop.jpg"
             media="(min-width: 768px)"
           />
           <img src="./images/image-product-mobile.jpg" alt="Perfume Chanel" />
